GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/BAF_Adjustment_Request__c.object-meta.xml
<CustomObject>
    <label>BAF Adjustment Request</label>
    <nameField>
        <displayFormat>BAF-{000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BAF Adjustment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>