GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BAF Adjustment Requests</relationshipLabel>
    <relationshipName>BAF_Adjustment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>