GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/Amount_Originally_Charged__c.field-meta.xml
<CustomField>
    <fullName>Amount_Originally_Charged__c</fullName>
    <label>Amount Originally Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>