GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/Amount_to_be_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Refunded__c</fullName>
    <label>Amount to be Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>