GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/BAF_number__c.field-meta.xml
<CustomField>
    <fullName>BAF_number__c</fullName>
    <formula>BAF_Account_Number__c</formula>
    <label>BAF number</label>
    <type>Text</type>
</CustomField>