GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Business_Account__c.ParentId__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>BAF Adjustment Requests</relationshipLabel>
    <relationshipName>BAF_Adjustment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>