GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>BAF Adjustment Requests</relationshipLabel>
    <relationshipName>BAF_Adjustment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>