GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>BAF Adjustment Requests</relationshipLabel>
    <relationshipName>BAF_Adjustment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>