GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/Credit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Number__c</fullName>
    <label>Credit Note Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>