GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>