GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/PNR_Draft__c.field-meta.xml
<CustomField>
    <fullName>PNR_Draft__c</fullName>
    <label>PNR Draft</label>
    <length>100</length>
    <type>Text</type>
</CustomField>