GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/fields/Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Processed_By__c</fullName>
    <label>Processed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>