GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/listViews/Actioned.listView-meta.xml
<ListView>
    <fullName>Actioned</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Actioned</value>
    </filters>
    <label>Actioned</label>
    <language>en_US</language>
</ListView>