GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Amount_to_be_Refunded__c</columns>
    <columns>Amount_Originally_Charged__c</columns>
    <columns>Credit_Note_Number__c</columns>
    <columns>Date_Raised__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>