GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/listViews/Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <columns>BAF_Account_Number__c</columns>
    <columns>Company_Name__c</columns>
    <columns>PNR__c</columns>
    <columns>Case__c</columns>
    <columns>Amount_Originally_Charged__c</columns>
    <columns>Amount_to_be_Refunded__c</columns>
    <columns>Currency__c</columns>
    <columns>Additional_Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Approval</value>
    </filters>
    <label>Awaiting Approval</label>
    <language>en_US</language>
    <sharedTo>
        <group>BAF_Adjustment_Approvers</group>
    </sharedTo>
</ListView>