GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/listViews/BAF_Adjustment_Approvers_BAF_Adjustment_Request.listView-meta.xml
<ListView>
    <fullName>BAF_Adjustment_Approvers_BAF_Adjustment_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>BAF Adjustment Approvers</label>
    <queue>BAF_Adjustment_BOM_Approvers</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>