GearsetPOC/force-app/main/default/objects/BAF_Adjustment_Request__c/listViews/No_Status.listView-meta.xml
<ListView>
    <fullName>No_Status</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Status</label>
    <language>en_US</language>
</ListView>